--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Bolt-Backend
+server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bolt?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
